tests/cases/smoke/invalid/class_two_setup.dp
class Fish {
    setup {
        print("a")
    }

    setup {
        print("b")
    }
}
